tests/invalid/type/group_non_const.pts
int group G {
  A = (int)1
}

function main() : void {}
